# neuromesh

./: .env.example  .gitignore  Makefile  README.md  docker-compose.production.yml  docker-compose.yml
api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
api/.ci/: Dockerfile  entrypoint.sh
api/src/: alembic.ini  gunicorn.conf.py  main.py
api/src/application/common/: tg_client.py  transaction.py
api/src/application/usecases/: neural_network.py  subscription.py  user.py
api/src/domain/ai/: model.py
api/src/domain/common/: response.py  value.py
api/src/domain/exceptions/: base.py  message.py  model.py  subscription.py  user.py
api/src/domain/exeptions/: base.py  message.py  model.py
api/src/domain/messages/: message.py
api/src/domain/neural_networks/: manager.py  model.py  repository.py
api/src/domain/subscriptions/: repository.py  subscription.py
api/src/domain/users/: repository.py  user.py
api/src/infrastructure/: config.py  ioc.py
api/src/infrastructure/di/: container.py  container_old.py
api/src/presentation/: exc_handlers.py  main.py
api/tests/: conftest.py
api/tests/load_testing/: locustfile.py
api/tests/neural_networks/: conftest.py  test_neural_network_repository.py
api/tests/subscriptions/: conftest.py  test_subscription_repository.py
api/tests/users/: conftest.py  test_repository.py  test_user_repository.py
docs/: UseCase.txt  (+1 more)
scheduler/: Dockerfile  pyproject.toml
tgbot/: .env.example  Dockerfile  pyproject.toml
tgbot/.ci/: Dockerfile  entrypoint.sh
tgbot/src/: main.py
tgbot/src/infrastructure/: config.py  dependencies.py
tgbot/src/presentation/: exc_handlers.py
(+89 files in other folders)
