[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["vedaka1 <vladik.kuleshov.2003@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
aio-pika = "^9.4.1"
g4f = "0.3.2.7"
google-generativeai = "^0.5.0"
punq = "^0.7.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
openai = "^1.30.5"
dishka = "^1.2.0"
gunicorn = "^22.0.0"
taskiq = "^0.11.6"
taskiq-aio-pika = "^0.4.0"
curl-cffi = "^0.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
locust = "^2.29.0"
testcontainers = {extras = ["postgres"], version = "^4.7.2"}
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
