[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["vedaka1 <vladik.kuleshov.2003@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
pydantic-settings = "^2.2.1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
